--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "graphql": "^15.5.3",
     "moment": "^2.29.1",
     "next": "11.0.1",
+    "rc-slider": "^9.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-moment": "^1.1.1",
+    "react-select": "^4.3.1",
     "react-transition-group": "^4.4.2",
     "sass": "^1.37.0"
   },
