--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export":"next export",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.4.10",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "graphql": "^15.5.3",
     "moment": "^2.29.1",
     "next": "11.0.1",
@@ -25,12 +26,15 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react": "17.0.15",
+    "autoprefixer": "^10.3.4",
     "axios": "^0.21.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "firebase": "^8.9.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.15",
     "typescript": "4.3.5"
   }
 }
