Update job search page

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.10",
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
     "@tailwindcss/line-clamp": "^0.2.1",
     "graphql": "^15.5.3",
     "moment": "^2.29.1",
