--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.10",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/line-clamp": "^0.2.1",
-    "graphql": "^15.5.3",
     "moment": "^2.29.1",
     "next": "11.0.1",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-moment": "^1.1.1",
+    "react-redux": "^7.2.5",
     "react-select": "^4.3.1",
     "react-transition-group": "^4.4.2",
-    "sass": "^1.37.0"
+    "react-use-googlelogin": "^0.12.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.37.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.6.1",
@@ -32,7 +35,6 @@
     "axios": "^0.21.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
-    "firebase": "^8.9.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "postcss": "^8.3.6",
