--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
+    "@react-pdf/renderer": "^1.6.17",
     "@tailwindcss/line-clamp": "^0.2.1",
     "moment": "^2.29.1",
     "next": "11.0.1",
