--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-froala-wysiwyg": "^4.0.5",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.5",
     "react-select": "^4.3.1",
