--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-froala-wysiwyg": "^4.0.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.5",
     "react-select": "^4.3.1",
