--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/line-clamp": "^0.2.1",
     "moment": "^2.29.1",
-    "next": "11.0.1",
+    "next": "^12.0.1",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
