--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^12.0.1",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
+    "react-big-calendar": "^0.38.0",
     "react-dom": "17.0.2",
     "react-froala-wysiwyg": "^4.0.5",
     "react-infinite-scroll-component": "^6.1.0",
