--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.5",
     "react-select": "^4.3.1",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "react-use-googlelogin": "^0.12.5",
     "redux-logger": "^3.0.6",
