--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^1.0.4",
     "@react-pdf/renderer": "^1.6.17",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "@themesberg/tailwind-datepicker": "^1.0.1",
     "moment": "^2.29.1",
     "next": "11.0.1",
     "rc-slider": "^9.7.2",
@@ -35,7 +36,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react": "17.0.15",
     "autoprefixer": "^10.3.4",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "formik": "^2.2.9",
