--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-froala-wysiwyg": "^4.0.5",
     "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.1",
+    "react-rating": "^2.0.5",
     "react-redux": "^7.2.5",
     "react-select": "^4.3.1",
     "react-toastify": "^8.1.0",
