--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "antd": "^4.18.0",
     "moment": "^2.29.1",
     "next": "^12.0.1",
     "rc-slider": "^9.7.2",
