--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.7",
+    "@apollo/react-hooks": "^4.0.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@react-pdf/renderer": "^1.6.17",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@themesberg/tailwind-datepicker": "^1.0.1",
     "antd": "^4.17.2",
+    "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "graphql-tag": "^2.12.6",
     "moment": "^2.29.1",
     "next": "^12.0.1",
     "rc-slider": "^9.7.2",
@@ -34,6 +41,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.37.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
