--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@apollo/react-hooks": "^4.0.0",
+    "@dhaiwat10/react-link-preview": "^1.12.2",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@react-pdf/renderer": "^1.6.17",
