--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql-tag": "^2.12.6",
     "lottie-web": "^5.8.1",
     "moment": "^2.29.1",
+    "multiselect-react-dropdown": "^2.0.21",
     "next": "^12.0.1",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
